[project]
name = "scrape-startup-berlin"
package-mode = false
version = "0.1.0"
description = ""
authors = [
    {name = "marinpet",email = "marina.55kovic@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "marimo (>=0.14.13,<0.15.0)",
    "polars (>=1.31.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


